After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767466 - daap: Fix warnings when configuring music sharing
daap: Fix warnings when configuring music sharing
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-06-09 17:12 UTC by Bastien Nocera
Modified: 2016-06-15 12:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
daap: Fix warnings when configuring music sharing (2.82 KB, patch)
2016-06-09 17:12 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2016-06-09 17:12:31 UTC
.
Comment 1 Bastien Nocera 2016-06-09 17:12:49 UTC
Created attachment 329492 [details] [review]
daap: Fix warnings when configuring music sharing

Even though both "plugin" instances we get for the main plugin and the
configuration widget are RbDaapPlugin types, they're separate instances.
So we cannot expect ->builder to be available in the main plugin.
Comment 2 Jonathan Matthew 2016-06-15 12:17:01 UTC
Review of attachment 329492 [details] [review]:

pushed as commit 2ef1ca8, thanks