daap: Fix warnings when configuring music sharing

Even though both "plugin" instances we get for the main plugin and the
configuration widget are RbDaapPlugin types, they're separate instances.
So we cannot expect ->builder to be available in the main plugin.

https://bugzilla.gnome.org/show_bug.cgi?id=767466